Add record deployment
